Nuevo proyecto de Curso React

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ otros_cursos/02-intro-javascript/node_modules/
 otros_cursos/03-primeros-pasos/counter-app-cra/node_modules/
 otros_cursos/03-primeros-pasos/counter-app-vite/node_modules
 otros_cursos/04-gif-expert-app/node_modules/
+fundamentos-react/node_modules/
